<resources>
    <string name="app_name">Attendie</string>
    <string name="aboutapp">
        This app is developed for educational purpose only.
        It fetches all data from college.This app store all data only in your phone and it does not promote bunking or irregular activity.
    </string>
    <string name="aboutappheader">About Attendie</string>
    <string name="networkslow">Your internet speed is slow..so it may take some time</string>
    <string name="waitlogin">Please wait....Logging in</string>
    <string name="showPassword">Show Password</string>
    <string name="idnty">Developer Himanshu Kumar!!Tap to View</string>
    <string name="shareString">Track Your Attendance, Result ,Iter Moodle, Study Collection, Exam Notice, Student Notice ,TimeTable ,Set an Alarm for Your Class Routine ,Plan your vaccation using Holiday and many more.. Currently available for Android devices.https://attendie.github.io/AttendieApp/</string>
    <string name="developer">Developed By Himanshu Kumar</string>
    <string name="offlineview">This is offline view</string>
    <string name="servercrash">You reach here because:</string>
    <string name="iterserverlost">1.May be iter server not working\n2. You are offline/check internet connectivity</string>
    <string name="tryagain">Try To Login Again</string>
    <string name="checkofflinedata">Check Offline Data</string>
    <string name="contact">Telegram-@himanshukrsinha</string>
    <string name="jointelegram">Join On Telegram-@itermaterial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_product">Add Your Product here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_cart_item">No cart item present add new item.</string>
</resources>