<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="150dp"
            android:layout_height="150dp"

            app:lottie_rawRes="@raw/anim"

        app:lottie_loop="true"
        app:lottie_autoPlay="true" />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/corner_field"
            android:ems="10"
            android:hint="Enter Registration Number"
            android:inputType="number"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/corner_field"
            android:ems="10"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text="@string/showPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_field"
            android:text="Login"
            android:textColor="#fff"
            app:backgroundTint="@color/purple_200" />

        <TextView
            android:id="@+id/forgetPassword"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="Forgot Password?"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainActivityLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/waitlogin" />

        <TextView
            android:id="@+id/textView12"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/networkslow"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Offline Data(Use WIthout login)"
        android:textColor="#017BDC"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:layout_width="409dp"
        android:layout_height="122dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

</androidx.constraintlayout.widget.ConstraintLayout>